src/scanners.c
/* Generated by re2c 0.13.5 */
#include <stdlib.h>
#include "chunk.h"
#include "scanners.h"

int _scan_at(int (*scanner)(const unsigned char *), cmark_chunk *c, int offset)
{
	int res;
	unsigned char *ptr = (unsigned char *)c->data;
	unsigned char lim = ptr[c->len];

	ptr[c->len] = '\0';
	res = scanner(ptr + offset);
	ptr[c->len] = lim;

	return res;
}



// Try to match a scheme including colon.
int _scan_scheme(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;

{
	unsigned char yych;

	yych = *p;
	switch (yych) {
	case '\n':	goto yy2;
	case 'A':
	case 'a':	goto yy6;
	case 'B':
	case 'b':	goto yy24;
	case 'C':
	case 'c':	goto yy3;
	case 'D':
	case 'd':	goto yy4;
	case 'E':
	case 'e':	goto yy25;
	case 'F':
	case 'f':	goto yy7;
	case 'G':
	case 'g':	goto yy8;
	case 'H':
	case 'h':	goto yy9;
	case 'I':
	case 'i':	goto yy10;
	case 'J':
	case 'j':	goto yy5;
	case 'K':
	case 'k':	goto yy26;
	case 'L':
	case 'l':	goto yy11;
	case 'M':
	case 'm':	goto yy12;
	case 'N':
	case 'n':	goto yy13;
	case 'O':
	case 'o':	goto yy14;
	case 'P':
	case 'p':	goto yy15;
	case 'Q':
	case 'q':	goto yy27;
	case 'R':
	case 'r':	goto yy16;
	case 'S':
	case 's':	goto yy17;
	case 'T':
	case 't':	goto yy18;
	case 'U':
	case 'u':	goto yy19;
	case 'V':
	case 'v':	goto yy20;
	case 'W':
	case 'w':	goto yy21;
	case 'X':
	case 'x':	goto yy22;
	case 'Y':
	case 'y':	goto yy28;
	case 'Z':
	case 'z':	goto yy23;
	default:	goto yy29;
	}
yy2:
	{ return 0; }
yy3:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy440;
	case 'H':
	case 'h':	goto yy439;
	case 'I':
	case 'i':	goto yy442;
	case 'O':
	case 'o':	goto yy438;
	case 'R':
	case 'r':	goto yy441;
	case 'V':
	case 'v':	goto yy437;
	default:	goto yy2;
	}
yy4:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy413;
	case 'I':
	case 'i':	goto yy412;
	case 'L':
	case 'l':	goto yy410;
	case 'N':
	case 'n':	goto yy411;
	case 'O':
	case 'o':	goto yy414;
	case 'T':
	case 't':	goto yy409;
	case 'V':
	case 'v':	goto yy408;
	default:	goto yy2;
	}
yy5:
	yych = *(marker = ++p);
	if (yych <= 'M') {
		if (yych == 'A') goto yy400;
		if (yych <= 'L') goto yy2;
		goto yy399;
	} else {
		if (yych <= 'a') {
			if (yych <= '`') goto yy2;
			goto yy400;
		} else {
			if (yych == 'm') goto yy399;
			goto yy2;
		}
	}
yy6:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy381;
	case 'B':
	case 'b':	goto yy380;
	case 'C':
	case 'c':	goto yy379;
	case 'D':
	case 'd':	goto yy378;
	case 'F':
	case 'f':	goto yy377;
	case 'I':
	case 'i':	goto yy376;
	case 'P':
	case 'p':	goto yy375;
	case 'T':
	case 't':	goto yy374;
	case 'W':
	case 'w':	goto yy34;
	default:	goto yy2;
	}
yy7:
	yych = *(marker = ++p);
	if (yych <= 'T') {
		if (yych <= 'E') {
			if (yych == 'A') goto yy361;
			if (yych <= 'D') goto yy2;
			goto yy360;
		} else {
			if (yych == 'I') goto yy359;
			if (yych <= 'S') goto yy2;
			goto yy362;
		}
	} else {
		if (yych <= 'e') {
			if (yych == 'a') goto yy361;
			if (yych <= 'd') goto yy2;
			goto yy360;
		} else {
			if (yych <= 'i') {
				if (yych <= 'h') goto yy2;
				goto yy359;
			} else {
				if (yych == 't') goto yy362;
				goto yy2;
			}
		}
	}
yy8:
	yych = *(marker = ++p);
	switch (yych) {
	case 'E':
	case 'e':	goto yy344;
	case 'G':
	case 'g':	goto yy34;
	case 'I':
	case 'i':	goto yy342;
	case 'O':
	case 'o':	goto yy343;
	case 'T':
	case 't':	goto yy341;
	default:	goto yy2;
	}
yy9:
	yych = *(marker = ++p);
	if (yych <= 'S') {
		if (yych <= '3') {
			if (yych <= '2') goto yy2;
			goto yy337;
		} else {
			if (yych == 'C') goto yy335;
			goto yy2;
		}
	} else {
		if (yych <= 'c') {
			if (yych <= 'T') goto yy336;
			if (yych <= 'b') goto yy2;
			goto yy335;
		} else {
			if (yych == 't') goto yy336;
			goto yy2;
		}
	}
yy10:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy317;
	case 'C':
	case 'c':	goto yy314;
	case 'M':
	case 'm':	goto yy316;
	case 'N':
	case 'n':	goto yy315;
	case 'P':
	case 'p':	goto yy313;
	case 'R':
	case 'r':	goto yy312;
	case 'T':
	case 't':	goto yy311;
	default:	goto yy2;
	}
yy11:
	yych = *(marker = ++p);
	if (yych <= 'D') {
		if (yych == 'A') goto yy305;
		if (yych <= 'C') goto yy2;
		goto yy304;
	} else {
		if (yych <= 'a') {
			if (yych <= '`') goto yy2;
			goto yy305;
		} else {
			if (yych == 'd') goto yy304;
			goto yy2;
		}
	}
yy12:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy271;
	case 'E':
	case 'e':	goto yy270;
	case 'I':
	case 'i':	goto yy273;
	case 'M':
	case 'm':	goto yy269;
	case 'S':
	case 's':	goto yy268;
	case 'T':
	case 't':	goto yy272;
	case 'U':
	case 'u':	goto yy267;
	case 'V':
	case 'v':	goto yy266;
	default:	goto yy2;
	}
yy13:
	yych = *(marker = ++p);
	switch (yych) {
	case 'E':
	case 'e':	goto yy261;
	case 'F':
	case 'f':	goto yy260;
	case 'I':
	case 'i':	goto yy259;
	case 'N':
	case 'n':	goto yy258;
	case 'O':
	case 'o':	goto yy257;
	default:	goto yy2;
	}
yy14:
	yych = *(marker = ++p);
	if (yych <= 'P') {
		if (yych == 'I') goto yy243;
		if (yych <= 'O') goto yy2;
		goto yy244;
	} else {
		if (yych <= 'i') {
			if (yych <= 'h') goto yy2;
			goto yy243;
		} else {
			if (yych == 'p') goto yy244;
			goto yy2;
		}
	}
yy15:
	yych = *(marker = ++p);
	if (yych <= 'S') {
		if (yych <= 'L') {
			if (yych == 'A') goto yy225;
			if (yych <= 'K') goto yy2;
			goto yy224;
		} else {
			if (yych <= 'O') {
				if (yych <= 'N') goto yy2;
				goto yy226;
			} else {
				if (yych <= 'Q') goto yy2;
				if (yych <= 'R') goto yy223;
				goto yy222;
			}
		}
	} else {
		if (yych <= 'n') {
			if (yych <= 'a') {
				if (yych <= '`') goto yy2;
				goto yy225;
			} else {
				if (yych == 'l') goto yy224;
				goto yy2;
			}
		} else {
			if (yych <= 'q') {
				if (yych <= 'o') goto yy226;
				goto yy2;
			} else {
				if (yych <= 'r') goto yy223;
				if (yych <= 's') goto yy222;
				goto yy2;
			}
		}
	}
yy16:
	yych = *(marker = ++p);
	if (yych <= 'T') {
		if (yych <= 'L') {
			if (yych == 'E') goto yy212;
			goto yy2;
		} else {
			if (yych <= 'M') goto yy211;
			if (yych <= 'R') goto yy2;
			if (yych <= 'S') goto yy210;
			goto yy209;
		}
	} else {
		if (yych <= 'm') {
			if (yych == 'e') goto yy212;
			if (yych <= 'l') goto yy2;
			goto yy211;
		} else {
			if (yych <= 'r') goto yy2;
			if (yych <= 's') goto yy210;
			if (yych <= 't') goto yy209;
			goto yy2;
		}
	}
yy17:
	yych = *(marker = ++p);
	switch (yych) {
	case 'E':
	case 'e':	goto yy165;
	case 'F':
	case 'f':	goto yy164;
	case 'G':
	case 'g':	goto yy163;
	case 'H':
	case 'h':	goto yy168;
	case 'I':
	case 'i':	goto yy167;
	case 'K':
	case 'k':	goto yy162;
	case 'M':
	case 'm':	goto yy161;
	case 'N':
	case 'n':	goto yy166;
	case 'O':
	case 'o':	goto yy160;
	case 'P':
	case 'p':	goto yy159;
	case 'S':
	case 's':	goto yy158;
	case 'T':
	case 't':	goto yy157;
	case 'V':
	case 'v':	goto yy156;
	default:	goto yy2;
	}
yy18:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy132;
	case 'E':
	case 'e':	goto yy128;
	case 'F':
	case 'f':	goto yy131;
	case 'H':
	case 'h':	goto yy127;
	case 'I':
	case 'i':	goto yy129;
	case 'N':
	case 'n':	goto yy130;
	case 'V':
	case 'v':	goto yy34;
	default:	goto yy2;
	}
yy19:
	yych = *(marker = ++p);
	if (yych <= 'T') {
		if (yych <= 'N') {
			if (yych == 'D') goto yy119;
			if (yych <= 'M') goto yy2;
			goto yy118;
		} else {
			if (yych == 'R') goto yy120;
			if (yych <= 'S') goto yy2;
			goto yy117;
		}
	} else {
		if (yych <= 'n') {
			if (yych == 'd') goto yy119;
			if (yych <= 'm') goto yy2;
			goto yy118;
		} else {
			if (yych <= 'r') {
				if (yych <= 'q') goto yy2;
				goto yy120;
			} else {
				if (yych == 't') goto yy117;
				goto yy2;
			}
		}
	}
yy20:
	yych = *(marker = ++p);
	if (yych <= 'I') {
		if (yych == 'E') goto yy101;
		if (yych <= 'H') goto yy2;
		goto yy100;
	} else {
		if (yych <= 'e') {
			if (yych <= 'd') goto yy2;
			goto yy101;
		} else {
			if (yych == 'i') goto yy100;
			goto yy2;
		}
	}
yy21:
	yych = *(marker = ++p);
	if (yych <= 'Y') {
		if (yych <= 'R') {
			if (yych == 'E') goto yy90;
			goto yy2;
		} else {
			if (yych <= 'S') goto yy91;
			if (yych <= 'T') goto yy89;
			if (yych <= 'X') goto yy2;
			goto yy88;
		}
	} else {
		if (yych <= 's') {
			if (yych == 'e') goto yy90;
			if (yych <= 'r') goto yy2;
			goto yy91;
		} else {
			if (yych <= 't') goto yy89;
			if (yych == 'y') goto yy88;
			goto yy2;
		}
	}
yy22:
	yych = *(marker = ++p);
	if (yych <= 'R') {
		if (yych <= 'F') {
			if (yych == 'C') goto yy67;
			if (yych <= 'E') goto yy2;
			goto yy65;
		} else {
			if (yych == 'M') goto yy66;
			if (yych <= 'Q') goto yy2;
			goto yy64;
		}
	} else {
		if (yych <= 'f') {
			if (yych == 'c') goto yy67;
			if (yych <= 'e') goto yy2;
			goto yy65;
		} else {
			if (yych <= 'm') {
				if (yych <= 'l') goto yy2;
				goto yy66;
			} else {
				if (yych == 'r') goto yy64;
				goto yy2;
			}
		}
	}
yy23:
	yych = *(marker = ++p);
	if (yych == '3') goto yy59;
	goto yy2;
yy24:
	yych = *(marker = ++p);
	if (yych <= 'O') {
		if (yych <= 'H') {
			if (yych == 'E') goto yy49;
			goto yy2;
		} else {
			if (yych <= 'I') goto yy48;
			if (yych <= 'N') goto yy2;
			goto yy47;
		}
	} else {
		if (yych <= 'h') {
			if (yych == 'e') goto yy49;
			goto yy2;
		} else {
			if (yych <= 'i') goto yy48;
			if (yych == 'o') goto yy47;
			goto yy2;
		}
	}
yy25:
	yych = *(marker = ++p);
	if (yych == 'D') goto yy45;
	if (yych == 'd') goto yy45;
	goto yy2;
yy26:
	yych = *(marker = ++p);
	if (yych == 'E') goto yy40;
	if (yych == 'e') goto yy40;
	goto yy2;
yy27:
	yych = *(marker = ++p);
	if (yych == 'U') goto yy37;
	if (yych == 'u') goto yy37;
	goto yy2;
yy28:
	yych = *(marker = ++p);
	if (yych == 'M') goto yy30;
	if (yych == 'm') goto yy30;
	goto yy2;
yy29:
	yych = *++p;
	goto yy2;
yy30:
	yych = *++p;
	if (yych == 'S') goto yy32;
	if (yych == 's') goto yy32;
yy31:
	p = marker;
	goto yy2;
yy32:
	yych = *++p;
	if (yych == 'G') goto yy33;
	if (yych != 'g') goto yy31;
yy33:
	yych = *++p;
	if (yych == 'R') goto yy34;
	if (yych != 'r') goto yy31;
yy34:
	yych = *++p;
	if (yych != ':') goto yy31;
yy35:
	++p;
	{ return (p - start); }
yy37:
	yych = *++p;
	if (yych == 'E') goto yy38;
	if (yych != 'e') goto yy31;
yy38:
	yych = *++p;
	if (yych == 'R') goto yy39;
	if (yych != 'r') goto yy31;
yy39:
	yych = *++p;
	if (yych == 'Y') goto yy34;
	if (yych == 'y') goto yy34;
	goto yy31;
yy40:
	yych = *++p;
	if (yych == 'Y') goto yy41;
	if (yych != 'y') goto yy31;
yy41:
	yych = *++p;
	if (yych == 'P') goto yy42;
	if (yych != 'p') goto yy31;
yy42:
	yych = *++p;
	if (yych == 'A') goto yy43;
	if (yych != 'a') goto yy31;
yy43:
	yych = *++p;
	if (yych == 'R') goto yy44;
	if (yych != 'r') goto yy31;
yy44:
	yych = *++p;
	if (yych == 'C') goto yy34;
	if (yych == 'c') goto yy34;
	goto yy31;
yy45:
	yych = *++p;
	if (yych != '2') goto yy31;
	yych = *++p;
	if (yych == 'K') goto yy34;
	if (yych == 'k') goto yy34;
	goto yy31;
yy47:
	yych = *++p;
	if (yych == 'L') goto yy58;
	if (yych == 'l') goto yy58;
	goto yy31;
yy48:
	yych = *++p;
	if (yych == 'T') goto yy54;
	if (yych == 't') goto yy54;
	goto yy31;
yy49:
	yych = *++p;
	if (yych == 'S') goto yy50;
	if (yych != 's') goto yy31;
yy50:
	yych = *++p;
	if (yych == 'H') goto yy51;
	if (yych != 'h') goto yy31;
yy51:
	yych = *++p;
	if (yych == 'A') goto yy52;
	if (yych != 'a') goto yy31;
yy52:
	yych = *++p;
	if (yych == 'R') goto yy53;
	if (yych != 'r') goto yy31;
yy53:
	yych = *++p;
	if (yych == 'E') goto yy34;
	if (yych == 'e') goto yy34;
	goto yy31;
yy54:
	yych = *++p;
	if (yych == 'C') goto yy55;
	if (yych != 'c') goto yy31;
yy55:
	yych = *++p;
	if (yych == 'O') goto yy56;
	if (yych != 'o') goto yy31;
yy56:
	yych = *++p;
	if (yych == 'I') goto yy57;
	if (yych != 'i') goto yy31;
yy57:
	yych = *++p;
	if (yych == 'N') goto yy34;
	if (yych == 'n') goto yy34;
	goto yy31;
yy58:
	yych = *++p;
	if (yych == 'O') goto yy34;
	if (yych == 'o') goto yy34;
	goto yy31;
yy59:
	yych = *++p;
	if (yych != '9') goto yy31;
	yych = *++p;
	if (yych != '.') goto yy31;
	yych = *++p;
	if (yych != '5') goto yy31;
	yych = *++p;
	if (yych != '0') goto yy31;
	yych = *++p;
	if (yych <= 'Q') goto yy31;
	if (yych <= 'S') goto yy34;
	if (yych <= 'q') goto yy31;
	if (yych <= 's') goto yy34;
	goto yy31;
yy64:
	yych = *++p;
	if (yych == 'I') goto yy34;
	if (yych == 'i') goto yy34;
	goto yy31;
yy65:
	yych = *++p;
	if (yych == 'I') goto yy86;
	if (yych == 'i') goto yy86;
	goto yy31;
yy66:
	yych = *++p;
	if (yych <= 'P') {
		if (yych == 'L') goto yy76;
		if (yych <= 'O') goto yy31;
		goto yy77;
	} else {
		if (yych <= 'l') {
			if (yych <= 'k') goto yy31;
			goto yy76;
		} else {
			if (yych == 'p') goto yy77;
			goto yy31;
		}
	}
yy67:
	yych = *++p;
	if (yych == 'O') goto yy68;
	if (yych != 'o') goto yy31;
yy68:
	yych = *++p;
	if (yych == 'N') goto yy69;
	if (yych != 'n') goto yy31;
yy69:
	yych = *++p;
	if (yych == '-') goto yy70;
	if (yych == ':') goto yy35;
	goto yy31;
yy70:
	yych = *++p;
	if (yych == 'U') goto yy71;
	if (yych != 'u') goto yy31;
yy71:
	yych = *++p;
	if (yych == 'S') goto yy72;
	if (yych != 's') goto yy31;
yy72:
	yych = *++p;
	if (yych == 'E') goto yy73;
	if (yych != 'e') goto yy31;
yy73:
	yych = *++p;
	if (yych == 'R') goto yy74;
	if (yych != 'r') goto yy31;
yy74:
	yych = *++p;
	if (yych == 'I') goto yy75;
	if (yych != 'i') goto yy31;
yy75:
	yych = *++p;
	if (yych == 'D') goto yy34;
	if (yych == 'd') goto yy34;
	goto yy31;
yy76:
	yych = *++p;
	if (yych == 'R') goto yy78;
	if (yych == 'r') goto yy78;
	goto yy31;
yy77:
	yych = *++p;
	if (yych == 'P') goto yy34;
	if (yych == 'p') goto yy34;
	goto yy31;
yy78:
	yych = *++p;
	if (yych == 'P') goto yy79;
	if (yych != 'p') goto yy31;
yy79:
	yych = *++p;
	if (yych == 'C') goto yy80;
	if (yych != 'c') goto yy31;
yy80:
	yych = *++p;
	if (yych != '.') goto yy31;
	yych = *++p;
	if (yych == 'B') goto yy82;
	if (yych != 'b') goto yy31;
yy82:
	yych = *++p;
	if (yych == 'E') goto yy83;
	if (yych != 'e') goto yy31;
yy83:
	yych = *++p;
	if (yych == 'E') goto yy84;
	if (yych != 'e') goto yy31;
yy84:
	yych = *++p;
	if (yych == 'P') goto yy85;
	if (yych != 'p') goto yy31;
yy85:
	yych = *++p;
	if (yych <= 'R') {
		if (yych == ':') goto yy35;
		goto yy31;
	} else {
		if (yych <= 'S') goto yy34;
		if (yych == 's') goto yy34;
		goto yy31;
	}
yy86:
	yych = *++p;
	if (yych == 'R') goto yy87;
	if (yych != 'r') goto yy31;
yy87:
	yych = *++p;
	if (yych == 'E') goto yy34;
	if (yych == 'e') goto yy34;
	goto yy31;
yy88:
	yych = *++p;
	if (yych == 'C') goto yy96;
	if (yych == 'c') goto yy96;
	goto yy31;
yy89:
	yych = *++p;
	if (yych == 'A') goto yy95;
	if (yych == 'a') goto yy95;
	goto yy31;
yy90:
	yych = *++p;
	if (yych == 'B') goto yy92;
	if (yych == 'b') goto yy92;
	goto yy31;
yy91:
	yych = *++p;
	if (yych <= 'R') {
		if (yych == ':') goto yy35;
		goto yy31;
	} else {
		if (yych <= 'S') goto yy34;
		if (yych == 's') goto yy34;
		goto yy31;
	}
yy92:
	yych = *++p;
	if (yych == 'C') goto yy93;
	if (yych != 'c') goto yy31;
yy93:
	yych = *++p;
	if (yych == 'A') goto yy94;
	if (yych != 'a') goto yy31;
yy94:
	yych = *++p;
	if (yych == 'L') goto yy34;
	if (yych == 'l') goto yy34;
	goto yy31;
yy95:
	yych = *++p;
	if (yych == 'I') goto yy34;
	if (yych == 'i') goto yy34;
	goto yy31;
yy96:
	yych = *++p;
	if (yych == 'I') goto yy97;
	if (yych != 'i') goto yy31;
yy97:
	yych = *++p;
	if (yych == 'W') goto yy98;
	if (yych != 'w') goto yy31;
yy98:
	yych = *++p;
	if (yych == 'Y') goto yy99;
	if (yych != 'y') goto yy31;
yy99:
	yych = *++p;
	if (yych == 'G') goto yy34;
